Apache Cayenne Release Notes
============================

For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 3.1-final
Date: not yet released
----------------------------------
Changes/New Features Since 3.1RC1:

Bug Fixes Since 3.1RC1:

CAY-1905 Multi-step prefetching NPE : 1..N..1 with absent N and root with no qualifier
CAY-1928 Second INNER join generated for OUTER flattended relationships in disjoint prefetches

----------------------------------
Release: 3.1RC1
Date: 16 February 2014
----------------------------------
Changes/New Features Since 3.1B2:

CAY-1813 Missing ObjEntity Attribute Validation with Duplicate DbEntity Columns
CAY-1822 Make DataMap editor fields wider 

Bug Fixes Since 3.1B2:

CAY-1736 IllegalArgumentException when synchronizing entities in the Modeler
CAY-1794 Duplicate attributes in discriminator columns of PersistentDescriptor
CAY-1797 NPE importing DataMap
CAY-1799 ROP: Server can't deserialize LIKE expression with pattern already compiled
CAY-1804 Serialisation of long[] type was not working correctly. 
CAY-1806 Error importing eomodel 
CAY-1809 Remove 'final' modifier from Cayenne, HessianUtil, PropertyComparator, ConversionUtil, and LinkedDeque
CAY-1818 Fix copyright year in the Modeler "about" panel
CAY-1827 EhCache region corresponding to a cache group loses its settings after 'removeGroup'
CAY-1845 Upgrade javadoc plugin to 2.9.1 
CAY-1854 driver.xsd schema shouldn't be in 3.1 - it is no longer applicable 
CAY-1856 Expression.expWithParameters does not work when parameters are placed in the inline collection 
CAY-1866 Change in General Modeler Preferences reverts old settings to default value
CAY-1868 Select contention with multiple contexts 
CAY-1874 DB2 Procedure action ignores the first result set