@@ -13,6 +13,8 @@ Date: not yet released
 ----------------------------------
 Changes/New Features Since 3.1RC1:
 
+CAY-1952 Undeprecate ObjectContext.deleteObject(..)
+
 Bug Fixes Since 3.1RC1:
 
 CAY-1905 Multi-step prefetching NPE : 1..N..1 with absent N and root with no qualifier
